fix some bugs with the elements not appearing on safari

--- a/tisha-wesbite/src/index.css
+++ b/tisha-wesbite/src/index.css
@@ -150,6 +150,6 @@ background-color: #E6E2DF;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
